[package]
name = "libp2p-noise"
edition = "2021"
description = "Cryptographic handshake protocol using the noise framework."
version = "0.45.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
rust-version = "1.65.0"

[dependencies]
asynchronous-codec = "0.6"
bytes = "1"
clatter = "1.1.0"
futures = "0.3.28"
libp2p-core = { version = "0.40.0" }
libp2p-identity = { version = "0.2.7", features = ["ed25519", "peerid"] }
multiaddr = "0.17.0"
multihash = "0.17.0"
quick-protobuf = "0.8"
rand = "0.8.3"
static_assertions = "1"
thiserror = "1.0.49"
tracing = "0.1.37"
x25519-dalek = "2"
zeroize = "1"
log = "0.4.25"

[dev-dependencies]
futures_ringbuf = "0.4.0"
quickcheck = "1.0.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
libp2p-identity = { version = "0.2.7", features = ["rand", "peerid"] }

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true

[features]
default = ["ml-kem"]
ml-kem = []

[lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "deny"
